@@ -1,10 +1,10 @@
 Package: oligoClasses
-Version: 1.5.17
+Version: 1.5.18
 Title: Classes for high-throughput SNP arrays
 Author: Benilton Carvalho <bcarvalh@jhsph.edu> and  Robert Scharpf <rscharpf@jhsph.edu>
 Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu> 
-Depends: methods, Biobase,
-Imports: graphics, IRanges, Biostrings
+Depends: Biobase
+Imports: graphics, IRanges, Biostrings, methods, Biobase
 Suggests: RSQLite, oligo
 Description: This package contains class definitions, validity checks, and initialization methods for classes used by the oligo package.
 License: GPL version 2 or newer
